--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,9 +1,9 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
 
-unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+# unbind C-b
+# set -g prefix C-a
+# bind C-a send-prefix
 
 set -g history-limit 10000
 
@@ -49,15 +49,14 @@ set-option -g renumber-windows on
 
 set -g @catppuccin_flavour 'mocha'
 
-#set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'thewtex/tmux-mem-cpu-load'
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+# set -g @plugin 'christoomey/vim-tmux-navigator'
+# set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+# set -g @plugin 'tmux-plugins/tmux-yank'
+# set -g @plugin 'thewtex/tmux-mem-cpu-load'
 
-run '~/.tmux/plugins/tpm/tpm'
+# run '~/.tmux/plugins/tpm/tpm'
 
 # set vi-mode
 set-window-option -g mode-keys vi
@@ -98,7 +97,7 @@ set-window-option -g window-status-current-style bright
 set -g status-interval 5
 set -g status-left-length 35
 set -g status-left '[#S] '
-set -g status-right '#[fg=yellow]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load -v -i 3 -m 2 -a 0 -g 5) | %H:%M %d-%m'
+# set -g status-right '#[fg=yellow]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load -v -i 3 -m 2 -a 0 -g 5) | %H:%M %d-%m'
 set -g status-justify centre
 
 # Automatically set window title
