--- a/dotfiles/.alacritty.toml
+++ b/dotfiles/.alacritty.toml
@@ -2,93 +2,93 @@ live_config_reload = true
 
 # TokyoNight Alacritty Colors
 # Default colors
-[colors.primary]
-background = '#24283b'
-foreground = '#c0caf5'
-
-#[colors.cursor]
-#cursor = '#c0caf5'
-#text = '#24283b'
-
-# Normal colors
-[colors.normal]
-black = '#1d202f'
-red = '#f7768e'
-green = '#9ece6a'
-yellow = '#e0af68'
-blue = '#7aa2f7'
-magenta = '#bb9af7'
-cyan = '#7dcfff'
-white = '#a9b1d6'
-
-# Bright colors
-[colors.bright]
-black = '#414868'
-red = '#f7768e'
-green = '#9ece6a'
-yellow = '#e0af68'
-blue = '#7aa2f7'
-magenta = '#bb9af7'
-cyan = '#7dcfff'
-white = '#c0caf5'
-
-# Indexed Colors
-[[colors.indexed_colors]]
-index = 16
-color = '#ff9e64'
-
-[[colors.indexed_colors]]
-index = 17
-color = '#db4b4b'
+# [colors.primary]
+# background = '#24283b'
+# foreground = '#c0caf5'
+#
+# #[colors.cursor]
+# #cursor = '#c0caf5'
+# #text = '#24283b'
+#
+# # Normal colors
+# [colors.normal]
+# black = '#1d202f'
+# red = '#f7768e'
+# green = '#9ece6a'
+# yellow = '#e0af68'
+# blue = '#7aa2f7'
+# magenta = '#bb9af7'
+# cyan = '#7dcfff'
+# white = '#a9b1d6'
+#
+# # Bright colors
+# [colors.bright]
+# black = '#414868'
+# red = '#f7768e'
+# green = '#9ece6a'
+# yellow = '#e0af68'
+# blue = '#7aa2f7'
+# magenta = '#bb9af7'
+# cyan = '#7dcfff'
+# white = '#c0caf5'
+#
+# # Indexed Colors
+# [[colors.indexed_colors]]
+# index = 16
+# color = '#ff9e64'
+#
+# [[colors.indexed_colors]]
+# index = 17
+# color = '#db4b4b'
 
 
 # Colors (Kanagawa Wave)
 # Source https//github.com/rebelot/kanagawa.nvim
 
-# [colors.cursor]
-# cursor = '#ffffff'
-# text = 'CellBackground'
-#
-# [colors.primary]
-# background = '#1f1f28'
-# foreground = '#dcd7ba'
-#
-# [colors.normal]
-# black   = '#090618'
-# red     = '#c34043'
-# green   = '#76946a'
-# yellow  = '#c0a36e'
-# blue    = '#7e9cd8'
-# magenta = '#957fb8'
-# cyan    = '#6a9589'
-# white   = '#c8c093'
-#
-# [colors.bright]
-# black   = '#727169'
-# red     = '#e82424'
-# green   = '#98bb6c'
-# yellow  = '#e6c384'
-# blue    = '#7fb4ca'
-# magenta = '#938aa9'
-# cyan    = '#7aa89f'
-# white   = '#dcd7ba'
-#
-# [colors.selection]
-# background = '#2d4f67'
-# foreground = '#c8c093'
-#
-# [[colors.indexed_colors]]
-# index = 16
-# color = '#ffa066'
-#
-# [[colors.indexed_colors]]
-# index = 17
-# color = '#ff5d62'
-#
-# [cursor]
-# style = "Block"
-# unfocused_hollow = false
-# vi_mode_style = "Beam"
+[colors.cursor]
+cursor = '#ffffff'
+text = 'CellBackground'
+
+[colors.primary]
+background = '#1f1f28'
+foreground = '#dcd7ba'
+
+[colors.normal]
+black   = '#090618'
+red     = '#c34043'
+green   = '#76946a'
+yellow  = '#c0a36e'
+blue    = '#7e9cd8'
+magenta = '#957fb8'
+cyan    = '#6a9589'
+white   = '#c8c093'
+
+[colors.bright]
+black   = '#727169'
+red     = '#e82424'
+green   = '#98bb6c'
+yellow  = '#e6c384'
+blue    = '#7fb4ca'
+magenta = '#938aa9'
+cyan    = '#7aa89f'
+white   = '#dcd7ba'
+
+[colors.selection]
+background = '#2d4f67'
+foreground = '#c8c093'
+
+[[colors.indexed_colors]]
+index = 16
+color = '#ffa066'
+
+[[colors.indexed_colors]]
+index = 17
+color = '#ff5d62'
+
+[cursor]
+style = "Block"
+unfocused_hollow = false
+vi_mode_style = "Beam"
 
 # [key_bindings]
 #   { key = "H", mods = "Alt", action = "SendString", chars = "\x1bh" }
