--- a/dotfiles/.alacritty.toml
+++ b/dotfiles/.alacritty.toml
@@ -90,7 +90,15 @@ style = "Block"
 unfocused_hollow = false
 vi_mode_style = "Beam"
 
-# [key_bindings]
+[[keyboard.bindings]]
+key = "V"
+mods = "Control|Shift"
+action = "Paste"
+
+[[keyboard.bindings]]
+key = "V"
+mods = "Command|Shift"
+action = "Paste"
 #   { key = "H", mods = "Alt", action = "SendString", chars = "\x1bh" }
 #   { key = "J", mods = "Alt", action = "SendString", chars = "\x1bj" }
 #   { key = "K", mods = "Alt", action = "SendString", chars = "\x1bk" }
