--- a/dotfiles/.alacritty.toml
+++ b/dotfiles/.alacritty.toml
@@ -1,47 +1,3 @@
-live_config_reload = true
-
-# TokyoNight Alacritty Colors
-# Default colors
-# [colors.primary]
-# background = '#24283b'
-# foreground = '#c0caf5'
-#
-# #[colors.cursor]
-# #cursor = '#c0caf5'
-# #text = '#24283b'
-#
-# # Normal colors
-# [colors.normal]
-# black = '#1d202f'
-# red = '#f7768e'
-# green = '#9ece6a'
-# yellow = '#e0af68'
-# blue = '#7aa2f7'
-# magenta = '#bb9af7'
-# cyan = '#7dcfff'
-# white = '#a9b1d6'
-#
-# # Bright colors
-# [colors.bright]
-# black = '#414868'
-# red = '#f7768e'
-# green = '#9ece6a'
-# yellow = '#e0af68'
-# blue = '#7aa2f7'
-# magenta = '#bb9af7'
-# cyan = '#7dcfff'
-# white = '#c0caf5'
-#
-# # Indexed Colors
-# [[colors.indexed_colors]]
-# index = 16
-# color = '#ff9e64'
-#
-# [[colors.indexed_colors]]
-# index = 17
-# color = '#db4b4b'
-
-
 # Colors (Kanagawa Wave)
 # Source https//github.com/rebelot/kanagawa.nvim
 
@@ -153,10 +109,15 @@ dynamic_padding = true
 x = 10
 y = 5
 
-[shell]
+[terminal.shell]
 program = "/bin/zsh"
 args = ["-l"]
 
 [bell]
 animation = "EaseOutExpo"
 duration = 0
+
+[general]
+live_config_reload = true
+
+[terminal]
