--- a/dotfiles/.gitconfig
+++ b/dotfiles/.gitconfig
@@ -5,11 +5,11 @@
 	editor = nvim
 	excludesFile = ~/.gitignore
 [mergetool "nvim"]
-	  cmd = nvim -c \"DiffviewOpen\"
+	cmd = nvim -c "DiffviewOpen"
 [merge]
-	  tool = nvim
+	tool = nvim
 [mergetool]
-	  prompt = false
+	prompt = false
 	keepBackup = false
 [pull]
 	rebase = true
@@ -18,6 +18,15 @@
 [push]
 	autoSetupRemote = true
 [alias]
+    recom = "!f() { \
+        current_branch=$(git branch --show-current); \
+        if [ \"$current_branch\" = \"main\" ] || [ \"$current_branch\" = \"master\" ]; then \
+            echo \"You are on the main branch.\"; \
+            exit 1; \
+        fi; \
+        git reset --soft origin/main && \
+        git commit -a; \
+    }; f"
     cleanup = "!f() { \
         current_branch=$(git branch --show-current); \
         if [ \"$current_branch\" = \"main\" ] || [ \"$current_branch\" = \"master\" ]; then \
