--- a/dotfiles/aichat/config.yaml
+++ b/dotfiles/aichat/config.yaml
@@ -8,4 +8,6 @@ wrap: no                         # Controls text wrapping (no, auto, <max-width>
 wrap_code: false                 # Enables or disables wrapping of code blocks
 
 model: openai:gpt-5-mini
+clients:
+- type: openai
 # https://github.com/sigoden/aichat/wiki/Environment-Variables
