--- a/dotfiles/aichat/config.yaml
+++ b/dotfiles/aichat/config.yaml
@@ -11,3 +11,4 @@ model: openai:gpt-5-mini
 clients:
 - type: openai
 # https://github.com/sigoden/aichat/wiki/Environment-Variables
+# {client}_API_KEY: Provide API keys for specific clients, e.g. OPENAI_API_KEY, GEMINI_API_KEY.
