--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -71,7 +71,7 @@ bind = $mod SHIFT, P, exec, bash -c 'mkdir -p ~/Pictures && grim -g "$(slurp)" ~
 # ── Window rules ──
 windowrulev2 = workspace 2, class:(brave-browser)
 windowrulev2 = workspace 3, class:(Alacritty)
-windowrulev2 = workspace 4, class:(anki)
+windowrulev2 = workspace 4, class:(Anki)
 windowrulev2 = workspace 4, class:^(org.qbittorrent.qBittorrent)$
 windowrulev2 = workspace 4, class:^(org.kde.okular)$
 windowrulev2 = workspace 4, class:(VLC)
