--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -60,8 +60,8 @@ bind = $mod SHIFT, S, exec, systemctl poweroff
 bind = $mod, V, exec, bluetoothctl connect 54:B7:E5:4E:1A:D7
 
 # Media key volume control
-bind = , XF86AudioRaiseVolume, exec, pamixer -i 5
-bind = , XF86AudioLowerVolume, exec, pamixer -d 5
+bind = , XF86AudioRaiseVolume, exec, pamixer -i 5 --unmute
+bind = , XF86AudioLowerVolume, exec, pamixer -d 5 --unmute
 bind = , XF86AudioMute, exec, pamixer -t
 
 # ── Screenshot bindings ──
