--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -68,6 +68,16 @@ bind = , XF86AudioMute, exec, pamixer -t
 bind = $mod, P, exec, bash -c 'mkdir -p ~/Pictures && grim ~/Pictures/screenshot_$(date +%s).png'
 bind = $mod SHIFT, P, exec, bash -c 'mkdir -p ~/Pictures && grim -g "$(slurp)" ~/Pictures/snip_$(date +%s).png'
 
+# ── Screen recording ──
+# Fullscreen recording
+bind = $mod, E, exec, bash -c 'mkdir -p ~/Videos && wl-screenrec -f ~/Videos/rec_$(date +%s).mp4 & echo $! > /tmp/wl-screenrec.pid && notify-send "🎥 Recording started (fullscreen)"'
+
+# Region recording (with slurp)
+bind = $mod, SHIFT, E, exec, bash -c 'mkdir -p ~/Videos && wl-screenrec -g "$(slurp)" -f ~/Videos/rec_$(date +%s).mp4 & echo $! > /tmp/wl-screenrec.pid && notify-send "🎥 Recording started (region)"'
+
+# Stop recording
+bind = $mod, Y, exec, bash -c 'kill -INT $(cat /tmp/wl-screenrec.pid) && rm /tmp/wl-screenrec.pid && notify-send "🛑 Recording stopped"'
+
 # ── Window rules ──
 windowrulev2 = workspace 2, class:(brave-browser)
 windowrulev2 = workspace 3, class:(Alacritty)
