--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -73,7 +73,7 @@ bind = $mod SHIFT, P, exec, bash -c 'mkdir -p ~/Pictures && grim -g "$(slurp)" ~
 bind = $mod, E, exec, bash -c 'mkdir -p ~/Videos && wl-screenrec -f ~/Videos/rec_$(date +%s).mp4 & echo $! > /tmp/wl-screenrec.pid && notify-send "🎥 Recording started (fullscreen)"'
 
 # Region recording (with slurp)
-bind = $mod, SHIFT, E, exec, bash -c 'mkdir -p ~/Videos && wl-screenrec -g "$(slurp)" -f ~/Videos/rec_$(date +%s).mp4 & echo $! > /tmp/wl-screenrec.pid && notify-send "🎥 Recording started (region)"'
+bind = $mod SHIFT, E, exec, bash -c 'mkdir -p ~/Videos && wl-screenrec -g "$(slurp)" -f ~/Videos/rec_$(date +%s).mp4 & echo $! > /tmp/wl-screenrec.pid && notify-send "🎥 Recording started (region)"'
 
 # Stop recording
 bind = $mod, Y, exec, bash -c 'kill -INT $(cat /tmp/wl-screenrec.pid) && rm /tmp/wl-screenrec.pid && notify-send "🛑 Recording stopped"'
