--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -64,19 +64,15 @@ bind = , XF86AudioRaiseVolume, exec, pamixer -i 5 --unmute
 bind = , XF86AudioLowerVolume, exec, pamixer -d 5 --unmute
 bind = , XF86AudioMute, exec, pamixer -t
 
-# ── Screenshot bindings ──
-bind = $mod, P, exec, bash -c 'mkdir -p ~/Pictures && grim ~/Pictures/screenshot_$(date +%s).png'
-bind = $mod SHIFT, P, exec, bash -c 'mkdir -p ~/Pictures && grim -g "$(slurp)" ~/Pictures/snip_$(date +%s).png'
+# ── Screen recording with wf-recorder (NVIDIA optimized) ──
+# Start recording - fullscreen (no PID file, just direct process)
+bind = $mod, E, exec, bash -c 'pkill -INT wf-recorder 2>/dev/null; sleep 0.5; mkdir -p ~/Videos && wf-recorder --codec=h264_nvenc -f ~/Videos/rec_$(date +%s).mp4 & notify-send "🎥 Recording started (fullscreen)"'
 
-# ── Screen recording ──
-# Fullscreen recording
-bind = $mod, E, exec, bash -c 'mkdir -p ~/Videos && wl-screenrec -f ~/Videos/rec_$(date +%s).mp4 & echo $! > /tmp/wl-screenrec.pid && notify-send "🎥 Recording started (fullscreen)"'
+# Start recording - region
+bind = $mod SHIFT, E, exec, bash -c 'pkill -INT wf-recorder 2>/dev/null; sleep 0.5; mkdir -p ~/Videos && wf-recorder --codec=h264_nvenc -g "$(slurp)" -f ~/Videos/rec_$(date +%s).mp4 & notify-send "🎥 Recording started (region)"'
 
-# Region recording (with slurp)
-bind = $mod SHIFT, E, exec, bash -c 'mkdir -p ~/Videos && wl-screenrec -g "$(slurp)" -f ~/Videos/rec_$(date +%s).mp4 & echo $! > /tmp/wl-screenrec.pid && notify-send "🎥 Recording started (region)"'
-
-# Stop recording
-bind = $mod, Y, exec, bash -c 'kill -INT $(cat /tmp/wl-screenrec.pid) && rm /tmp/wl-screenrec.pid && notify-send "🛑 Recording stopped"'
+# Stop recording - kill by process name
+bind = $mod, Y, exec, bash -c 'pkill -INT wf-recorder && notify-send "🛑 Recording stopped" || notify-send "❌ No active recording"'
 
 # ── Window rules ──
 windowrulev2 = workspace 2, class:(brave-browser)
