--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -64,6 +64,11 @@ bind = , XF86AudioRaiseVolume, exec, pamixer -i 5 --unmute
 bind = , XF86AudioLowerVolume, exec, pamixer -d 5 --unmute
 bind = , XF86AudioMute, exec, pamixer -t
 
+# ── Screenshot bindings ──
+bind = $mod, P, exec, bash -c 'mkdir -p ~/Pictures && grim ~/Pictures/screenshot_$(date +%s).png && notify-send "📸 Screenshot taken"'
+bind = $mod SHIFT, P, exec, bash -c 'mkdir -p ~/Pictures && grim -g "$(slurp)" ~/Pictures/snip_$(date +%s).png && notify-send "📸 Screenshot taken"'
+
+
 # ── Screen recording with wf-recorder (NVIDIA optimized) ──
 # Start recording - fullscreen (no PID file, just direct process)
 bind = $mod, E, exec, bash -c 'pkill -INT wf-recorder 2>/dev/null; sleep 0.5; mkdir -p ~/Videos && wf-recorder --codec=h264_nvenc -f ~/Videos/rec_$(date +%s).mp4 & notify-send "🎥 Recording started (fullscreen)"'
