--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -71,13 +71,13 @@ bind = $mod SHIFT, P, exec, bash -c 'mkdir -p ~/Pictures && grim -g "$(slurp)" ~
 
 # ── Screen recording with wf-recorder (NVIDIA optimized) ──
 # Start recording - fullscreen (no PID file, just direct process)
-bind = $mod, E, exec, bash -c 'pkill -INT wf-recorder 2>/dev/null; sleep 0.5; mkdir -p ~/Videos && wf-recorder --codec=h264_nvenc -f ~/Videos/rec_$(date +%s).mp4 & notify-send "🎥 Recording started (fullscreen)"'
+# bind = $mod, E, exec, bash -c 'pkill -INT wf-recorder 2>/dev/null; sleep 0.5; mkdir -p ~/Videos && wf-recorder --codec=h264_nvenc -f ~/Videos/rec_$(date +%s).mp4 & notify-send "🎥 Recording started (fullscreen)"'
 
 # Start recording - region
-bind = $mod SHIFT, E, exec, bash -c 'pkill -INT wf-recorder 2>/dev/null; sleep 0.5; mkdir -p ~/Videos && wf-recorder --codec=h264_nvenc -g "$(slurp)" -f ~/Videos/rec_$(date +%s).mp4 & notify-send "🎥 Recording started (region)"'
+# bind = $mod SHIFT, E, exec, bash -c 'pkill -INT wf-recorder 2>/dev/null; sleep 0.5; mkdir -p ~/Videos && wf-recorder --codec=h264_nvenc -g "$(slurp)" -f ~/Videos/rec_$(date +%s).mp4 & notify-send "🎥 Recording started (region)"'
 
 # Stop recording - kill by process name
-bind = $mod, Y, exec, bash -c 'pkill -INT wf-recorder && notify-send "🛑 Recording stopped" || notify-send "❌ No active recording"'
+# bind = $mod, Y, exec, bash -c 'pkill -INT wf-recorder && notify-send "🛑 Recording stopped" || notify-send "❌ No active recording"'
 
 # ── Window rules ──
 windowrulev2 = workspace 2, class:(brave-browser)
