--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -20,7 +20,7 @@ decoration {
 #$mod = SUPER
 $mod = ALT
 
-bind = $mod SHIFT, R, exec, hyprctl reload
+bind = $mod SHIFT, X, exec, hyprctl reload
 
 # ── Apps ──
 bind = $mod, Return, exec, alacritty
@@ -80,12 +80,12 @@ bind = $mod SHIFT, P, exec, bash -c 'mkdir -p ~/Pictures && grim -g "$(slurp)" ~
 # bind = $mod, Y, exec, bash -c 'pkill -INT wf-recorder && notify-send "🛑 Recording stopped" || notify-send "❌ No active recording"'
 
 # ── Window rules ──
-windowrulev2 = workspace 2, class:(brave-browser)
-windowrulev2 = workspace 3, class:(Alacritty)
-windowrulev2 = workspace 4, class:(Anki)
-windowrulev2 = workspace 4, class:^(org.qbittorrent.qBittorrent)$
-windowrulev2 = workspace 1, class:^(org.kde.okular)$
-windowrulev2 = workspace 4, class:(VLC)
+windowrule = workspace 2, class:(brave-browser)
+windowrule = workspace 3, class:(Alacritty)
+windowrule = workspace 4, class:(Anki)
+windowrule = workspace 4, class:^(org.qbittorrent.qBittorrent)$
+windowrule = workspace 1, class:^(org.kde.okular)$
+windowrule = workspace 4, class:(VLC)
 
 # ── Initialisation ──
 exec-once = sleep 8 && anki
