--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -80,12 +80,10 @@ bind = $mod SHIFT, P, exec, bash -c 'mkdir -p ~/Pictures && grim -g "$(slurp)" ~
 # bind = $mod, Y, exec, bash -c 'pkill -INT wf-recorder && notify-send "🛑 Recording stopped" || notify-send "❌ No active recording"'
 
 # ── Window rules ──
-windowrule = workspace 2, class:(brave-browser)
-windowrule = workspace 3, class:(Alacritty)
-windowrule = workspace 4, class:(Anki)
-windowrule = workspace 4, class:^(org.qbittorrent.qBittorrent)$
-windowrule = workspace 1, class:^(org.kde.okular)$
-windowrule = workspace 4, class:(VLC)
+windowrule = match:class ^(brave-browser)$, workspace 2 silent
+windowrule = match:class ^(Alacritty)$, workspace 3 silent
+windowrule = match:class ^(Anki)$, workspace 4 silent
+windowrule = match:class ^(VLC)$, workspace 4 silent
 
 # ── Initialisation ──
 exec-once = sleep 8 && anki
